@@ -1,11 +1,15 @@
 Version 0.7.0-SNAPSHOT
+    * [fix] compatibility with Idea 14, Webstorm 9 products
     * [fix] #97 UnsupportedOperationException viewing collection
     * [fix] javascript file detection for executing script in Idea 13.1 UI
     * [fix] #81 Use User Database as authentication database
+    * [add] Document edition: DateTimePicker
     * [add] Redesign query panel
     * [add] #90 SSL Support for mongo connection (not tested)
     * [add] #82 reload resulset after document deletion or modification
     * [add] Drop database and collection actions (caution!)
+    * [upd] Better support of Darcula/Intellij themes
+    * [upd] Document edition: Enlarge Add Key/Value Dialog default width
     * [upd] adapt authentication code after migration of mongo-java-driver to version 2.12.2
 
 Version 0.6.1
